--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -47,21 +47,38 @@
             </div>
         </nav>
     </header>
-    <main class="container">
-        <div class="row">
-            <div class="col-12 pt-3 pb-5">
-                <h1>Sobre mi</h1>
+    <main>
+        <section class="container" id="descripcion">
+            <div class="row">
+                <div class="col-12 col-sm-7">
+                    <h1 class="pb-5 pt-3"></h1>
+                    <p>Apasionado por la tecnología y gestión de proyectos. Soy docente de cursos de programación Full
+                        Stack y de Base de datos.</p>
+                </div>
+                <div class="col-12 col-sm-5">
+                    <img src="css/imgenes/Sobre mí_files/nelson-daniel-tarche.jpg" alt="nelson-daniel-tarche"
+                        class="foto-perfil">
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-sm-8">
-                <p>Apasionado por la tecnología y gestión de proyectos. Soy docente de cursos de programación Full Stack y de Base de datos.</p>
+        </section>
+        <section id="stack-tecnologico">
+            <div class="container">
+                <div class="row">
+                    <h2>
+                        Stack tecnologico
+                    </h2>
+                </div>
             </div>
-            <div class="col-12 col-sm-4">
-                <img src="css/imgenes/Sobre mí_files/nelson-daniel-tarche.jpg" alt="Nelson" class="foto-perfil">
+        </section>
+        <section id="Epexperiencia">
+            <div class="container">
+                <div class="row">
+                    <h2>
+                        Experiencia laboral
+                    </h2>
+                </div>
             </div>
-            
-        </div>
+        </section>
     </main>
     <footer class="container mt-auto py-4">
         <div class="row">
@@ -77,7 +94,7 @@
             </div>
         </div>
 
-            <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp px-3 pt-3 pb-4  "></i></a>
+        <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp px-3 pt-3 pb-4  "></i></a>
 
     </footer>
 </body>
