Actualizacion sobr mi

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -49,36 +49,213 @@
     </header>
     <main>
         <section class="container" id="descripcion">
-            <div class="row">
+            <div class="row mb-5">
                 <div class="col-12 col-sm-7">
                     <h1 class="pb-5 pt-3"></h1>
                     <p>Apasionado por la tecnología y gestión de proyectos. Soy docente de cursos de programación Full
                         Stack y de Base de datos.</p>
+                    <div class="my-5">
+                        <a href="contacto.html" class="btn-rojo">Enviar mensaje</a>
+                    </div>
                 </div>
-                <div class="col-12 col-sm-5">
+                <div class="col-12 col-sm-5 mx-auto text-center">
                     <img src="css/imgenes/Sobre mí_files/nelson-daniel-tarche.jpg" alt="nelson-daniel-tarche"
                         class="foto-perfil">
                 </div>
             </div>
         </section>
         <section id="stack-tecnologico">
-            <div class="container">
+            <div class="container pb-5">
                 <div class="row">
-                    <h2>
-                        Stack tecnologico
-                    </h2>
+                    <div class="col-12 py-5">
+                        <h2>
+                            Stack tecnologico
+                        </h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3>JavaScript</h3>
+                                <img src="css/imgenes/js.png" alt="JavaScript">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3>PHP</h3>
+                                <img src="css/imgenes/php.png" alt="php">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3>Html</h3>
+                                <img src="css/imgenes/html.png" alt="Html">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3>Laravel</h3>
+                                <img src="css/imgenes/laravel.png" alt="laravel">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3>Bootstrap</h3>
+                                <img src="css/imgenes/bootstrap.png" alt="bootstrap">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3>MySql</h3>
+                                <img src="css/imgenes/mysql.png" alt="mysql">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3>Css</h3>
+                                <img src="css/imgenes/css.png" alt="css">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3>Git</h3>
+                                <img src="css/imgenes/git.png" alt="git">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3>Amazon</h3>
+                                <img src="css/imgenes/amazon.png" alt="amazon">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3>Linux</h3>
+                                <img src="css/imgenes/linux.png" alt="linux">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3> Apache</h3>
+                                <img src="css/imgenes/apache.png" alt="apache">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-2">
+                            <div class="tecnologia mb-4 pt-5">
+                                <h3>Paypal</h3>
+                                <img src="css/imgenes/paypal.png" alt="paypal">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
-        <section id="Epexperiencia">
+        <section id="experiencia">
             <div class="container">
                 <div class="row">
-                    <h2>
-                        Experiencia laboral
-                    </h2>
+                    <div class="col-12 py-5">
+                        <h2>
+                            <i class="fa-solid fa-briefcase"></i>Experiencia laboral
+                        </h2>
+                    </div>
+                </div>
+                <div class="row shadow pt-3">
+                    <div class="col-2 d-none d-sm-block p-5 ">
+                        <img src="css/imgenes/logo-depcsuite.svg" alt="DEPCSUITE" class="img-fluid  gris">
+                    </div>
+                    <div class="col-sm-10">
+                        <h3>Director-Founder</h3>
+                        <h4>DEPCSUITE SA</h4>
+                        <h5>2016-Presente</h5>
+                        <P>Lidero el desarrollo y posicionamiento de la empresa en sus tres líneas de negocio: Cloud
+                            services, Software factory y Academia IT para Latam y España.</P>
+                    </div>
+                
+                    <div class="col-2 d-none d-sm-block p-5 mt-4">
+                        <img src="css/imgenes/Sobre mí_files/uba.jpg" alt="DEPCSUITE" class="img-fluid gris">
+                    </div>
+                    <div class="col-sm-10 mt-4">
+                        <h3>Desarrollador Senior Full Stack</h3>
+                        <h4>Universidad de Buenos Aires</h4>
+                        <h5>ago 2015 - ene 2020</h5>
+                        <P>Planeamiento del proyecto, seguimiento, reuniones de avance, estimación de entregables. Comunicación con
+                            clientes y equipos internos. Desarrollo de nuevos sistemas. Capacitar y organizar el área de desarrollo.
+                            Gestionar los ambientes de desarrollo. Administrar repositorio. Asignación de tareas al equipo.</P>
+                    </div>
+                    <div class="col-2 d-none d-sm-block p-5 mt-4">
+                        <img src="css/imgenes/sin-logo.png" alt="DEPCSUITE" class="img-fluid gris">
+                    </div>
+                    <div class="col-sm-10 mt-4">
+                        <h3>Certificado Digital SA</h3>
+                        <h4>Consultor Desarrollador</h4>
+                        <h5>ago 2014 - dic 2016</h5>
+                        <P>Desarrollo, implementación y mantenimiento de sistemas y páginas Web para la consultora, en colaboración con el analista funcional y líder de equipo.</P>
+                    </div>
+                    <div class="col-2 d-none d-sm-block p-5 mt-4">
+                        <img src="css/imgenes/Sobre mí_files/enacom.svg" alt="DEPCSUITE" class="img-fluid gris">
+                    </div>
+                    <div class="col-sm-10 mt-4">
+                        <h3>Desarrollador Senior Full Stack</h3>
+                        <h4>ENACOM</h4>
+                        <h5>jul 2012 - jun 2018</h5>
+                        <P>Diseño y desarrollo de sistemas internos para el organismo. Mantenimiento de los sistemas existentes. Gestión de base de datos y reportes. Comunicación con distintos interlocutores: clientes internos y equipos de IT. Reuniones de avance. Organización del proyecto. Resolución de pedidos mediante sistema de incidencias.</P>
+                    </div>
+                    <div class="col-2 d-none d-sm-block p-5 mt-4">
+                        <img src="css/imgenes/sin-logo.png" alt="DEPCSUITE" class="img-fluid gris">
+                    </div>
+                    <div class="col-sm-10 mt-4">
+                        <h3>Desarrollador Back-end y Front-end</h3>
+                        <h4>Freelance</h4>
+                        <h5>jul 2011 - dic 2016</h5>
+                        <P>Desarrollo, implementación y mantenimiento de sistemas y páginas Web. Relevamiento de requisitos con el cliente. Desarrollo de brief de marca y del sitio web. Participación en eventos de networking.</P>
+                    </div>
+                    <div class="col-2 d-none d-sm-block p-5 mt-4">
+                        <img src="css/imgenes/Sobre mí_files/globons.png" alt="DEPCSUITE" class="img-fluid gris">
+                    </div>
+                    <div class="col-sm-10 mt-4">
+                        <h3>Desarrollador Back-end y Front-end</h3>
+                        <h4>Globons SRL</h4>
+                        <h5>abr 2010 - ene 2011</h5>
+                        <P>Desarrollo, implementación y mantenimiento de sistemas y páginas Web.</P>
+                    </div>
+            </div>
+            </div>
+        </section>
+        <section id="formacion-academica">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>
+                            Formación académica
+                        </h2>
+                    </div>
                 </div>
             </div>
         </section>
+        <section id="cursos">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>
+                            Cursos de desarrollo profesional
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="hobbies">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-6">
+                        
+                    </div>
+                    <div class="col-12 col-sm-6">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
     <footer class="container mt-auto py-4">
         <div class="row">
